<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name</string>
    <string name="pax">Pax</string>
    <string name="table_area">Table Area</string>
    <string name="smoking">Smoking</string>
    <string name="non_smoking">Non-Smoking</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="mobile_no">Mobile No.</string>
</resources>